<resources>
    <string name="app_name">App.mine</string>
    <string name="video_play_setting">视频播放设置</string>
    <string name="auto_player_always">3G/4G和Wifi</string>
    <string name="auto_player_only_wifi">仅Wifi</string>
    <string name="auto_player_never">关闭</string>
    <string name="video_setting">视频播放环境条件</string>
    <string name="login">登 陆</string>
    <string name="unlogin">您还未登陆哦.</string>
    <string name="login_now">马上登陆</string>
    <string name="share_weapon">分享joker给朋友</string>
    <string name="my_qrcode">我的二维码</string>
    <string name="version_update">版本更新</string>
</resources>
