<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

  <data>
      <variable
          name="model"
          type="com.weapon.joker.app.mine.MineViewModel"/>

  </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/rl_mine_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:paddingBottom="15dp"
            android:paddingTop="15dp">

            <ImageView
                android:id="@+id/iv_mine_avatar"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:src="@drawable/default_user_avatar"/>

            <TextView
                android:id="@+id/tv_mine_login_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:layout_toRightOf="@+id/iv_mine_avatar"
                android:text="@string/unlogin"
                android:textColor="@color/color_333333"
                android:textSize="13sp"/>

            <TextView
                android:id="@+id/tv_mine_login_now"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="20dp"
                android:background="@color/color_fed952"
                android:padding="10dp"
                android:text="@string/login_now"
                android:textColor="@color/color_333333"
                android:textSize="16sp"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_mine_logined"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:paddingBottom="15dp"
            android:visibility="gone">

            <ImageView
                android:id="@+id/iv_mine_avatar_logined"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="30dp"
                android:src="@drawable/default_user_avatar"/>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true">

                <TextView
                    android:id="@+id/tv_mine_nickname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:text="昵称"
                    android:textColor="@color/color_333333"
                    android:textSize="16sp"/>

                <TextView
                    android:id="@+id/tv_mine_signature"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_mine_nickname"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="7dp"
                    android:text="个性签名"
                    android:textColor="@color/color_mine_line"
                    android:textSize="13sp"/>
            </RelativeLayout>
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:background="@color/color_cccccc"/>

        <TextView
            android:id="@+id/tv_mine_video_setting"
            style="@style/MineStyle"
            android:text="@string/video_play_setting"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginLeft="@dimen/public_text_padding"
            android:background="@color/color_mine_line"/>

        <TextView
            android:id="@+id/tv_mine_share"
            style="@style/MineStyle"
            android:text="@string/share_weapon"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginLeft="@dimen/public_text_padding"
            android:background="@color/color_mine_line"/>

        <TextView
            android:id="@+id/tv_mine_qr_code"
            style="@style/MineStyle"
            android:layout_width="match_parent"
            android:text="@string/my_qrcode"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginLeft="@dimen/public_text_padding"
            android:background="@color/color_mine_line"/>

        <TextView
            android:id="@+id/tv_mine_update"
            style="@style/MineStyle"
            android:text="@string/version_update"/>
        <TextView
            android:text="@{model.mEntry.testString}"
            style="@style/MineStyle"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/color_mine_line"/>
    </LinearLayout>

</layout>